<resources>
    <string name="app_name">UoWsa</string>
    <string name="login">Login</string>
    <string name="logIn">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="conPassword">Confirm Password</string>
    <string name="alreadyRegisteredLogin">Already registered, Login</string>
    <string name="forgotPassword">Forgot My Password</string>
    <string name="dontHaveAnAccount">Don\'t have an account ?</string>
    <string name="alreadyHaveAnAccount">Already have an account ?</string>
    <string name="passwordReset">Password Reset</string>
    <string name="reset">Reset</string>
    <string name="studentWellbeing">STUDENT WELLBEING</string>
    <string name="discussionBoard">DISCUSSION BOARD</string>
    <string name="friends">FRIENDS</string>
    <string name="uowMessage">UoW MESSAGE</string>
    <string name="studentUnion">STUDENT UNION</string>
    <string name="clubsAndSocieties">Clubs and Societies</string>
    <string name="aboutUS">ABOUT US</string>
    <string name="settings">SETTINGS</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="uowsaProject">The UoWsa Project</string>
    <string name="username">Username</string>
    <string name="innerLayer">Inner Layer: University of Westminster Social Application (UoWsa).</string>
    <string name="layer1">Layer 1: The direct stakeholders who are involved with the creation and development of the project.</string>
    <string name="layer1p">The developer Christopher Wong, supervisor Markos Mentzelopoulos and selected students from the University of Westminster (testers) are the direct stakeholders of the mobile application. The developer is in full control of the research, development, gathering resources, questionnaire, and the testing control process. The supervisor analyses the entire process of the project as well as contributing ideas for the developer to have an insight on possibilities of an efficient approach or requirements which needs to be met. The role of the tester has the ability to test the project with their unbiased opinions including functionality, UX design, visual interface, security and many more. This is incredibly useful for the developer as the testers are able to evaluate the advantages, disadvantages, and essentials of the application.</string>
    <string name="layer2">Layer 2: The continuous stakeholders who maintains the application when the project is complete.</string>
    <string name="layer2p">Once the application is completed, the administrators take control of the in-app affairs as well as providing feedback to the developer of the application for changes and additional implementation, therefore they act upon as secondary stakeholders. Furthermore, the users are also recognised as the secondary stakeholders as they would have the most interaction with the application itself and understanding the advantages and disadvantages of the application. As the application directly involves the University of Westminster; social, ethical and legal implications will affect the institution, as the project idea is targeted for University of Westminster students. This project is also developed with university resources; therefore, the university will also be secondary stakeholders.</string>
    <string name="layer3">Layer 3: External stakeholders</string>
    <string name="layer3p">External stakeholders are individuals or groups outside this project who has interests or concerns in the operation and performance of this project (Strategy, 2021). Competitors are considered as external stakeholders due to the rival’s application being competitive in comparison to this project. Also, the public can choose to enrol at the University of Westminster and thereby have a designated student accreditation to use the application, consequently they will have access to the application and become a layer 2 stakeholder.</string>
    <string name="su1">We’re the University of Westminster Students’ Union (UWSU), or SU if you\'d like to keep it short.</string>
    <string name="su2">We\'re a membership-led organisation, that exists under the Education Act 1994. Our sole purpose is to improve your life whilst at the University of Westminster; from providing free advice and support, to bangin nights out and inclusive student groups, there\'s a little something for every Westminster student.</string>
    <string name="su3">We represent you</string>
    <string name="su4">Our core priority is to ensure you are heard and represented, and get the very best experience during your time at Westminster. Aside from carrying your voice across the University to make positive changes, we also want to make sure you get the most out of your Westminster experience by participating in plenty of diverse activities, build your networks and communities, become change-makers, and so much more!</string>
    <string name="su5">We support you</string>
    <string name="su6">We have so much on offer to make you feel valued and supported, and being part of a community is the first step towards building that support. Our sports clubs and society groups are the perfect space for you to meet like-minded people, share experiences with, and maybe even become \'forever friends\'.</string>
    <string name="su7">We also have a team of advisors that offer free, independent, and impartial academic advice to guide and support you through any academic-related issues such as plagiarism, mitigating circumstances and lots more.</string>
    <string name="su8">We\'re led by you</string>
    <string name="su9">Our strategic direction and goals are led by you! – five student Officers are elected each year to lead the strategic direction of the Union, each striving to make fundamental changes to your student experience across the University and the SU.</string>
    <string name="su10">We\'re a charity</string>
    <string name="su11">Just like any charity, we exist to represent a specific group of people, and for us that is the students at Westminster. We are governed by a Trustee Board – these individuals hold the Union accountable by ensuring that our work is in the best interest for all students. We work within the laws and regulations governed by the Charity Commission; our board ensures that we stay within these laws and regulations.</string>
    <string name="su12">We fight with you</string>
    <string name="su13">We are passionate about liberation and student activism and believe that all students should have equal opportunities whilst at Westminster. it is an important stance for us and we will do everything we can to ensure that this happens and that all students are treated fairly and as equals.</string>
    <string name="suEmail">su-info@westminster.ac.uk</string>
    <string name="suLocation">Where to find us</string>
    <string name="suAddress">35 Marylebone Rd, Marylebone,</string>
    <string name="suOfficeTime">Office opening hours</string>
    <string name="suTime">10am - 5pm | Monday - Friday</string>
    <string name="accountProfile">ACCOUNT PROFILE</string>
    <string name="tos"><u>Terms of Service</u></string>
    <string name="tos1">End Users Agreement</string>
    <string name="tos2">Last updated 01, February 2023</string>
    <string name="tos3">UoWsa is licensed to You (End-User) by UoWsa for use only under the terms of this License agreement.</string>
    <string name="tos4">By signing up the Licensed Application from Google’s software distribution platform (“Play Store”), and any update thereto (as permitted by this Licence Agreement) and You accept this Licence Agreement. Play Store is referred to this Licence Agreement as “Services”. The licensor reserves all rights not expressly granted to You. UoWsa is to be used on devices that operate with Google’s operating system (“Android”).</string>
    <string name="tos5">The Licensor is solely responsible for providing any maintenance and support services for this Licensed Application. You can reach the Licensor at the email address listed in the Play Store Overview for this application.</string>
    <string name="tos6">UoWsa and End-User acknowledge the services have no obligation whatsoever to furnish any maintenance and support service with respect to the licensed application.</string>
    <string name="tos7">The licensed application may invite you to chat, contribute to, or participate in discussions with the opportunity to create, submit, post, display, transmit, perform and distribute materials to the Licensed Application. This includes but not limited to text, writings, animations, photographs, comments, suggestions or personal information or other material. Contributions may be viewable by other users of the Licensed Application. As such, any contributions transmitted by you may be treated as non-confidential and non-proprietary. When you create or make available any contributions, you thereby represent and warrant that:</string>
    <string name="tos8">1.	The creation, distribution, transmission, public display, performance, and the accessing, downloading, or copying of your contributions do not and will not infringe the proprietary right, including but not limited to the copyright, patent, trademark, trade secret or moral rights of any third party.</string>
    <string name="tos9">2.	You are the creator and owner of or have the necessary licences, rights, consents, releases and permissions to use and authorise us the, the Licensed application and other users of the licensed application to use your contributions in any manner contemplated by the Licensed Agreement.</string>
    <string name="tos10">3.	You have written consent, release, and/or permission of each and every identifiable individual person in your contributions to use the name or likeness or each and every such identifiable individual application and this licence agreement.</string>
    <string name="tos11">4.	Your contributions are not false, inaccurate, or misleading.</string>
    <string name="tos12">5.	Your contributions are not unsolicited or unauthorised advertising, promotional materials, pyramid schemes, letter chains, spam, mass mailing, or other forms of solicitation.</string>
    <string name="tos13">6.	Your contributions are not obscene, lewd, lascivious, filthy, violet, harassing, libellous, slanderous, or otherwise objectionable (as determined by us).</string>
    <string name="tos14">7.	Your contributions do not ridicule, mock, disparage, intimidate, or abuse anyone.</string>
    <string name="tos15">8.	Your contributions are not sued to harass or threaten (in the legal sense of those terms) any other person and to promote violence against a specific person or class of people.</string>
    <string name="tos16">9.	Your contributions do not violate any applicable law, regulation, or rule.</string>
    <string name="tos17">10.	Your contributions do not violate the privacy or publicity rights of any third party.</string>
    <string name="tos18">11.	Your contributions do not violate any applicable law concerning child pornography, or otherwise intend to protect the health or well-being of minors.</string>
    <string name="tos19">12.	Your contributions do not include any offense comments that are connected to race, national origin, gender, sexual preference, or physical handicap.</string>
    <string name="tos20">13.	Your contributions do not otherwise violate, or link to material that violates any provision of this Licence agreement or any applicable law or regulation.</string>
    <string name="tos21">Any use of the Licenced Application in violation of the foregoing violates this Licence Agreement and many result in, among other things, termination, or suspension of your rights to use the Licensed Application.</string>
    <string name="blockedUsers">Blocked Users</string>
</resources>