<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSecondary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="90dp">


            <TextView
                android:id="@+id/blockedFriendsTitle"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/titlebar"
                android:paddingStart="32dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/blockedUsers"
                android:fontFamily="@font/merriweather_black"
                android:textColor="?colorAccent"
                android:textSize="34sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/blockedUsersRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/blockedFriendsTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <TextView
        android:id="@+id/bottomMenu"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/bottom_menu"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:id="@+id/bottomMenuShape"
        android:layout_width="421dp"
        android:layout_height="60dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/navshape"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"/>

    <ImageButton
        android:id="@+id/navHomeBtn"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="?colorSurface"
        android:src="@drawable/ic_home"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/home"
        app:tint="?colorAccent" />

    <ImageButton
        android:id="@+id/navProfileBtn"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="?colorSurface"
        android:src="@drawable/ic_profile"
        android:layout_toEndOf="@+id/navHomeBtn"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/profile"
        app:tint="?colorAccent"/>

    <ImageButton
        android:id="@+id/navUowMessage"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="?colorSurface"
        android:src="@drawable/ic_uow_message_icon1"
        android:layout_toEndOf="@+id/navProfileBtn"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/uowMessage"
        app:tint="?colorAccent"/>

    <ImageButton
        android:id="@+id/navSettings"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="?colorSurface"
        android:src="@drawable/ic_settings"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/settings"
        app:tint="?colorAccent"/>

</RelativeLayout>